@@ -3,10 +3,13 @@ package io.github.alathra.alathraskills.gui.main;
 import com.github.milkdrinkers.colorparser.ColorParser;
 import dev.triumphteam.gui.builder.item.ItemBuilder;
 import dev.triumphteam.gui.guis.Gui;
+import io.github.alathra.alathraskills.AlathraSkills;
+import io.github.alathra.alathraskills.api.SkillsManager;
 import io.github.alathra.alathraskills.api.SkillsPlayerManager;
 import io.github.alathra.alathraskills.gui.GuiHelper;
 import io.github.alathra.alathraskills.utility.Cfg;
 import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.TextDecoration;
 import org.bukkit.Bukkit;
 import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
@@ -16,8 +19,11 @@ import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 
 import java.util.Collections;
+import java.util.List;
 
 public class PopulateContent {
+
+    private static SkillsManager skillsManager = AlathraSkills.getSkillsManager();
 
     public static void populateContent(Gui gui, Player player) {
         OfflinePlayer offlinePlayer = Bukkit.getOfflinePlayer(player.getUniqueId());
@@ -30,44 +36,31 @@ public class PopulateContent {
 
         int skillPointsAvailable = availableSkillPoints(player);
 
-        ItemStack expToNext = new ItemStack(Material.EMERALD);
-        ItemMeta expToNextMeta = expToNext.getItemMeta();
-        expToNextMeta.displayName(ColorParser.of("<green><bold>Exp to Next Skill Point").build());
-        expToNextMeta.lore(Collections.singletonList(ColorParser.of("<yellow>Amount: " + Math.round(remainingExp)).build()));
-        expToNext.setItemMeta(expToNextMeta);
-
-        ItemStack availableSkillPoints = new ItemStack(Material.BOOK);
+        ItemStack availableSkillPoints = new ItemStack(Material.END_CRYSTAL);
         ItemMeta availableSkillPointsMeta = availableSkillPoints.getItemMeta();
-        availableSkillPointsMeta.displayName(ColorParser.of("<red><bold>Available Skill Points").build());
-        availableSkillPointsMeta.lore(Collections.singletonList(ColorParser.of("<yellow>Amount: " + skillPointsAvailable).build()));
+        availableSkillPointsMeta.displayName(ColorParser.of(GuiHelper.EXPERIENCE_GRADIENT + "Skill Points").build().decoration(TextDecoration.ITALIC, false));
+        availableSkillPointsMeta.lore(
+            List.of(
+                ColorParser.of("<color:#a8a8a8>Points: "+ skillPointsAvailable).build(),
+                ColorParser.of("<color:#a8a8a8>Next Point: %s/%s".formatted(expPerLevel - remainingExp, expPerLevel)).build()
+            )
+        );
         availableSkillPoints.setItemMeta(availableSkillPointsMeta);
-
-        ItemStack openSkillTrees = new ItemStack(Material.EXPERIENCE_BOTTLE);
-        ItemMeta openSkillTreesMeta = openSkillTrees.getItemMeta();
-        openSkillTreesMeta.displayName(ColorParser.of("<yellow><bold>Open Skill Trees").build());
-        openSkillTrees.setItemMeta(openSkillTreesMeta);
-
-        ItemStack totalExpItem = new ItemStack(Material.AMETHYST_SHARD);
-        ItemMeta totalExpMeta = totalExpItem.getItemMeta();
-        totalExpMeta.displayName(ColorParser.of("<light_purple><bold>Total Exp Earned").build());
-        totalExpMeta.lore(Collections.singletonList(ColorParser.of("<yellow>Amount: " + Math.round(totalExp)).build()));
-        totalExpItem.setItemMeta(totalExpMeta);
 
         ItemStack exit = new ItemStack(Material.BARRIER);
         ItemMeta exitMeta = exit.getItemMeta();
-        exitMeta.displayName(ColorParser.of("<dark_red><bold>Exit").build());
+        exitMeta.displayName(ColorParser.of("<red>Close").build().decoration(TextDecoration.ITALIC, false));
         exit.setItemMeta(exitMeta);
 
-        ItemStack playerHead = new ItemStack(Material.PLAYER_HEAD);
-        SkullMeta skullMeta = (SkullMeta) playerHead.getItemMeta();
-        skullMeta.setOwningPlayer(offlinePlayer);
-        skullMeta.displayName(ColorParser.of("<color:#00B300><bold>Reset skills").build());
-        playerHead.setItemMeta(skullMeta);
-
-        ItemStack openDisable = new ItemStack(Material.REDSTONE_TORCH);
-        ItemMeta disableMeta = openDisable.getItemMeta();
-        disableMeta.displayName(ColorParser.of("<red>Disable passive skills").build());
-        openDisable.setItemMeta(disableMeta);
+        ItemStack optionsButton = new ItemStack(Material.COMPARATOR);
+        ItemMeta optionsMeta = optionsButton.getItemMeta();
+        optionsMeta.displayName(ColorParser.of("<aqua>Options").build().decoration(TextDecoration.ITALIC, false)); // TODO Replace with custom rgb color
+        optionsMeta.lore(
+            List.of(
+                ColorParser.of("<color:#a8a8a8>Open the options menu").build()
+            )
+        );
+        optionsButton.setItemMeta(optionsMeta);
 
         ItemStack border = new ItemStack(Material.GRAY_STAINED_GLASS_PANE);
         ItemMeta borderMeta = border.getItemMeta();
@@ -76,15 +69,15 @@ public class PopulateContent {
 
         gui.getFiller().fill(ItemBuilder.from(border).asGuiItem());
 
-        gui.setItem(2, 5, ItemBuilder.from(totalExpItem).asGuiItem());
-        gui.setItem(3, 4, ItemBuilder.from(availableSkillPoints).asGuiItem());
-        gui.setItem(3, 5, ItemBuilder.from(openSkillTrees).asGuiItem(event -> {
-            GuiHelper.openSkillCategoryGui(player);
-        }));
-        gui.setItem(3, 6, ItemBuilder.from(expToNext).asGuiItem());
-        gui.setItem(5, 4, ItemBuilder.from(playerHead).asGuiItem(event -> GuiHelper.openResetGui(player)));
-        gui.setItem(5, 6, ItemBuilder.from(openDisable).asGuiItem(event -> GuiHelper.openDisableSkillGui(player)));
-        gui.setItem(5, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
+        gui.setItem(2, 5, ItemBuilder.from(availableSkillPoints).asGuiItem());
+
+        gui.setItem(6, 1, ItemBuilder.from(optionsButton).asGuiItem(event -> GuiHelper.openOptionsGui(player)));
+        gui.setItem(6, 9, ItemBuilder.from(exit).asGuiItem(event -> gui.close(player)));
+
+        // Open skill trees
+        gui.setItem(4, 3, ItemBuilder.from(skillsManager.skillCategories.get(1).getIcon()).asGuiItem(event -> GuiHelper.openSkillGui(player, 1, 1)));
+        gui.setItem(4, 5, ItemBuilder.from(skillsManager.skillCategories.get(2).getIcon()).asGuiItem(event -> GuiHelper.openSkillGui(player, 2, 1)));
+        gui.setItem(4, 7, ItemBuilder.from(skillsManager.skillCategories.get(3).getIcon()).asGuiItem(event -> GuiHelper.openSkillGui(player, 3, 1)));
     }
 
     private static int availableSkillPoints(Player p) {
